# planes-frames

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  context.py  database.py  db_init.py  main.py  mappings.py  models.py  plane_frame_generator.py  schemas.py  service.py  settings.py  tasks.py  utils.py  validator.py
app/data_generators/: multiple_frames_generator.py  single_frame_generator.py  utils.py
app/database/: models.py  plane_repository.py  settings.py
app/frames_generators/: multiple_frames_generator.py  single_frame_generator.py  utils.py
tests/: fixtures.py  test_models.py  test_service.py
